--- a/search/all_6d.html
+++ b/search/all_6d.html
@@ -25,6 +25,12 @@
   <span class="SRScope">db_handling</span>
  </div>
 </div>
+<div class="SRResult" id="SR_max_5fwebsite_5flen">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../namespacedb__handling.html#a8a9291e19503ad7c0df428a5e7f4baf7" target="_parent">MAX_WEBSITE_LEN</a>
+  <span class="SRScope">db_handling</span>
+ </div>
+</div>
 <div class="SRStatus" id="Searching">Searching...</div>
 <div class="SRStatus" id="NoMatches">No Matches</div>
 <script type="text/javascript"><!--
