--- a/search/all_72.html
+++ b/search/all_72.html
@@ -19,33 +19,33 @@
   <span class="SRScope">app</span>
  </div>
 </div>
-<div class="SRResult" id="SR_register_5faction">
+<div class="SRResult" id="SR_random_5fnickname">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classapp_1_1register__action.html" target="_parent">register_action</a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a22fcd6009b23a2f2e1aca012b6ec8d6b" target="_parent">random_nickname</a>
+  <span class="SRScope">db_handling::DBHandler</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_random_5fnickname">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classapp_1_1random__nickname.html" target="_parent">random_nickname</a>
   <span class="SRScope">app</span>
  </div>
 </div>
-<div class="SRResult" id="SR_register_5fform">
+<div class="SRResult" id="SR_register">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classapp_1_1register__form.html" target="_parent">register_form</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classapp_1_1register.html" target="_parent">register</a>
   <span class="SRScope">app</span>
  </div>
 </div>
 <div class="SRResult" id="SR_reset_5fpassword">
  <div class="SREntry">
-  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a6ea6db043fcb5f05b4302c49ee576f15" target="_parent">reset_password</a>
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a6ea6db043fcb5f05b4302c49ee576f15" target="_parent">reset_password</a>
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
-<div class="SRResult" id="SR_reset_5fpassword_5faction">
+<div class="SRResult" id="SR_reset_5fpassword">
  <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classapp_1_1reset__password__action.html" target="_parent">reset_password_action</a>
-  <span class="SRScope">app</span>
- </div>
-</div>
-<div class="SRResult" id="SR_reset_5fpassword_5fform">
- <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classapp_1_1reset__password__form.html" target="_parent">reset_password_form</a>
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classapp_1_1reset__password.html" target="_parent">reset_password</a>
   <span class="SRScope">app</span>
  </div>
 </div>
