--- a/search/all_73.html
+++ b/search/all_73.html
@@ -37,6 +37,10 @@
   <div class="SRChildren">
     <a id="Item4_c0" onkeydown="return searchResults.NavChild(event,4,0)" onkeypress="return searchResults.NavChild(event,4,0)" onkeyup="return searchResults.NavChild(event,4,0)" class="SRScope" href="../classapp_1_1index.html#a0f2aa60532e6de881b4eaf27a570e4b4" target="_parent">app::index.show()</a>
     <a id="Item4_c1" onkeydown="return searchResults.NavChild(event,4,1)" onkeypress="return searchResults.NavChild(event,4,1)" onkeyup="return searchResults.NavChild(event,4,1)" class="SRScope" href="../classapp_1_1manage__account.html#a0c42244694c7947cbe40e0ba14bd5d80" target="_parent">app::manage_account.show()</a>
+    <a id="Item4_c2" onkeydown="return searchResults.NavChild(event,4,2)" onkeypress="return searchResults.NavChild(event,4,2)" onkeyup="return searchResults.NavChild(event,4,2)" class="SRScope" href="../classapp_1_1register.html#aa264b7840b69ec42a99c8085ed35db72" target="_parent">app::register.show()</a>
+    <a id="Item4_c3" onkeydown="return searchResults.NavChild(event,4,3)" onkeypress="return searchResults.NavChild(event,4,3)" onkeyup="return searchResults.NavChild(event,4,3)" class="SRScope" href="../classapp_1_1widget.html#ae2e63bf8ca252c3a53c8ca6792c882f8" target="_parent">app::widget.show()</a>
+    <a id="Item4_c4" onkeydown="return searchResults.NavChild(event,4,4)" onkeypress="return searchResults.NavChild(event,4,4)" onkeyup="return searchResults.NavChild(event,4,4)" class="SRScope" href="../classapp_1_1reset__password.html#ad0b4fd22ae66f8eee94bc7f64c98eadf" target="_parent">app::reset_password.show()</a>
+    <a id="Item4_c5" onkeydown="return searchResults.NavChild(event,4,5)" onkeypress="return searchResults.NavChild(event,4,5)" onkeyup="return searchResults.NavChild(event,4,5)" class="SRScope" href="../classapp_1_1history.html#aca6d071dfc21ca59002977ee6331487f" target="_parent">app::history.show()</a>
   </div>
  </div>
 </div>
