--- a/search/all_75.html
+++ b/search/all_75.html
@@ -25,28 +25,46 @@
   <span class="SRScope">app</span>
  </div>
 </div>
+<div class="SRResult" id="SR_user">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classapp_1_1user.html" target="_parent">user</a>
+  <span class="SRScope">app</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_user_5fexists">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#adcf1c95de421b54b6e3d8f3d29e74d4e" target="_parent">user_exists</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#adcf1c95de421b54b6e3d8f3d29e74d4e" target="_parent">user_exists</a>
   <span class="SRScope">db_handling::DBHandler</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_user_5fgive_5fuser_5fdatalove">
+ <div class="SREntry">
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classapp_1_1user__give__user__datalove.html" target="_parent">user_give_user_datalove</a>
+  <span class="SRScope">app</span>
  </div>
 </div>
 <div class="SRResult" id="SR_user_5flogin">
  <div class="SREntry">
-  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a8f17386333f7ed91a017b892fed5d4b0" target="_parent">user_login</a>
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a8f17386333f7ed91a017b892fed5d4b0" target="_parent">user_login</a>
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
 <div class="SRResult" id="SR_user_5flogoff">
  <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a379abbbc6ff7831fdb06617d18949739" target="_parent">user_logoff</a>
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a379abbbc6ff7831fdb06617d18949739" target="_parent">user_logoff</a>
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
 <div class="SRResult" id="SR_userexception">
  <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classdb__handling_1_1_user_exception.html" target="_parent">UserException</a>
+  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../classdb__handling_1_1_user_exception.html" target="_parent">UserException</a>
   <span class="SRScope">db_handling</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_users">
+ <div class="SREntry">
+  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="../classapp_1_1users.html" target="_parent">users</a>
+  <span class="SRScope">app</span>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
