--- a/search/functions_72.html
+++ b/search/functions_72.html
@@ -19,9 +19,15 @@
   <span class="SRScope">app</span>
  </div>
 </div>
+<div class="SRResult" id="SR_random_5fnickname">
+ <div class="SREntry">
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a22fcd6009b23a2f2e1aca012b6ec8d6b" target="_parent">random_nickname</a>
+  <span class="SRScope">db_handling::DBHandler</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_reset_5fpassword">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a6ea6db043fcb5f05b4302c49ee576f15" target="_parent">reset_password</a>
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a6ea6db043fcb5f05b4302c49ee576f15" target="_parent">reset_password</a>
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
