--- a/search/all_63.html
+++ b/search/all_63.html
@@ -19,14 +19,32 @@
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
+<div class="SRResult" id="SR_change_5fpassword_5faction">
+ <div class="SREntry">
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classapp_1_1manage__account.html#a0c8f6ed684c2030758aa329a0703257f" target="_parent">change_password_action</a>
+  <span class="SRScope">app::manage_account</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_change_5fwebsites">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#aec667bdaeb195d778695143fc6c97b7c" target="_parent">change_websites</a>
+  <span class="SRScope">db_handling::DBHandler</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_config">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../namespaceconfig.html" target="_parent">config</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../namespaceconfig.html" target="_parent">config</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_cookieindependentsession">
+ <div class="SREntry">
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classapp_1_1_cookie_independent_session.html" target="_parent">CookieIndependentSession</a>
+  <span class="SRScope">app</span>
  </div>
 </div>
 <div class="SRResult" id="SR_create_5fuser">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a6964d819044092a1295e0207c07f8998" target="_parent">create_user</a>
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a6964d819044092a1295e0207c07f8998" target="_parent">create_user</a>
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
