--- a/search/all_67.html
+++ b/search/all_67.html
@@ -13,18 +13,21 @@
   <div class="SRChildren">
     <a id="Item0_c0" onkeydown="return searchResults.NavChild(event,0,0)" onkeypress="return searchResults.NavChild(event,0,0)" onkeyup="return searchResults.NavChild(event,0,0)" class="SRScope" href="../classapp_1_1index.html#a19f5fbd63c36d9424ac6427e30cf48bd" target="_parent">app::index.GET()</a>
     <a id="Item0_c1" onkeydown="return searchResults.NavChild(event,0,1)" onkeypress="return searchResults.NavChild(event,0,1)" onkeyup="return searchResults.NavChild(event,0,1)" class="SRScope" href="../classapp_1_1manage__account.html#af789b102212ce23ba298a948a5fc9f8b" target="_parent">app::manage_account.GET()</a>
-    <a id="Item0_c2" onkeydown="return searchResults.NavChild(event,0,2)" onkeypress="return searchResults.NavChild(event,0,2)" onkeyup="return searchResults.NavChild(event,0,2)" class="SRScope" href="../classapp_1_1register__form.html#a52bd96e0e26a430232ed0bd9a6fb252e" target="_parent">app::register_form.GET()</a>
-    <a id="Item0_c3" onkeydown="return searchResults.NavChild(event,0,3)" onkeypress="return searchResults.NavChild(event,0,3)" onkeyup="return searchResults.NavChild(event,0,3)" class="SRScope" href="../classapp_1_1register__action.html#af293bf505df1039d4967560b6c716487" target="_parent">app::register_action.GET()</a>
+    <a id="Item0_c2" onkeydown="return searchResults.NavChild(event,0,2)" onkeypress="return searchResults.NavChild(event,0,2)" onkeyup="return searchResults.NavChild(event,0,2)" class="SRScope" href="../classapp_1_1register.html#a96fdace7ff790ccc536d12c41628b80f" target="_parent">app::register.GET()</a>
+    <a id="Item0_c3" onkeydown="return searchResults.NavChild(event,0,3)" onkeypress="return searchResults.NavChild(event,0,3)" onkeyup="return searchResults.NavChild(event,0,3)" class="SRScope" href="../classapp_1_1users.html#a9c5ce2a9f5517ef793722565bcc84989" target="_parent">app::users.GET()</a>
     <a id="Item0_c4" onkeydown="return searchResults.NavChild(event,0,4)" onkeypress="return searchResults.NavChild(event,0,4)" onkeyup="return searchResults.NavChild(event,0,4)" class="SRScope" href="../classapp_1_1widget.html#ab472baf008876f2b814a04f843f3176d" target="_parent">app::widget.GET()</a>
     <a id="Item0_c5" onkeydown="return searchResults.NavChild(event,0,5)" onkeypress="return searchResults.NavChild(event,0,5)" onkeyup="return searchResults.NavChild(event,0,5)" class="SRScope" href="../classapp_1_1give__user__datalove.html#a6dbd73b464e000e762f908b24d8fcd50" target="_parent">app::give_user_datalove.GET()</a>
     <a id="Item0_c6" onkeydown="return searchResults.NavChild(event,0,6)" onkeypress="return searchResults.NavChild(event,0,6)" onkeyup="return searchResults.NavChild(event,0,6)" class="SRScope" href="../classapp_1_1logoff.html#a63ca8b6cc21d263a4a0e00112b3c4f8c" target="_parent">app::logoff.GET()</a>
     <a id="Item0_c7" onkeydown="return searchResults.NavChild(event,0,7)" onkeypress="return searchResults.NavChild(event,0,7)" onkeyup="return searchResults.NavChild(event,0,7)" class="SRScope" href="../classapp_1_1unregister.html#a9dc08e09b40c04b9f69d4941eacd9ed8" target="_parent">app::unregister.GET()</a>
-    <a id="Item0_c8" onkeydown="return searchResults.NavChild(event,0,8)" onkeypress="return searchResults.NavChild(event,0,8)" onkeyup="return searchResults.NavChild(event,0,8)" class="SRScope" href="../classapp_1_1reset__password__form.html#a194c13ec6224bf776efbb13c428bed20" target="_parent">app::reset_password_form.GET()</a>
-    <a id="Item0_c9" onkeydown="return searchResults.NavChild(event,0,9)" onkeypress="return searchResults.NavChild(event,0,9)" onkeyup="return searchResults.NavChild(event,0,9)" class="SRScope" href="../classapp_1_1reset__password__action.html#a162d1669a47b70c2704b387733014186" target="_parent">app::reset_password_action.GET()</a>
+    <a id="Item0_c8" onkeydown="return searchResults.NavChild(event,0,8)" onkeypress="return searchResults.NavChild(event,0,8)" onkeyup="return searchResults.NavChild(event,0,8)" class="SRScope" href="../classapp_1_1reset__password.html#a6d3b4c76e0d01809372a743b32d2311c" target="_parent">app::reset_password.GET()</a>
+    <a id="Item0_c9" onkeydown="return searchResults.NavChild(event,0,9)" onkeypress="return searchResults.NavChild(event,0,9)" onkeyup="return searchResults.NavChild(event,0,9)" class="SRScope" href="../classapp_1_1random__nickname.html#ad23cdd7ad0c9a628e123d20137a2e0ba" target="_parent">app::random_nickname.GET()</a>
     <a id="Item0_c10" onkeydown="return searchResults.NavChild(event,0,10)" onkeypress="return searchResults.NavChild(event,0,10)" onkeyup="return searchResults.NavChild(event,0,10)" class="SRScope" href="../classapp_1_1get__users__love.html#a5550134e8e54e147a4b0a12cde07a202" target="_parent">app::get_users_love.GET()</a>
     <a id="Item0_c11" onkeydown="return searchResults.NavChild(event,0,11)" onkeypress="return searchResults.NavChild(event,0,11)" onkeyup="return searchResults.NavChild(event,0,11)" class="SRScope" href="../classapp_1_1get__users__available__love.html#a3abd105e4281abb47464c6af29c6da8a" target="_parent">app::get_users_available_love.GET()</a>
     <a id="Item0_c12" onkeydown="return searchResults.NavChild(event,0,12)" onkeypress="return searchResults.NavChild(event,0,12)" onkeyup="return searchResults.NavChild(event,0,12)" class="SRScope" href="../classapp_1_1get__users__received__love.html#a5663dc8eee6ba4fbd71973b6b859d647" target="_parent">app::get_users_received_love.GET()</a>
     <a id="Item0_c13" onkeydown="return searchResults.NavChild(event,0,13)" onkeypress="return searchResults.NavChild(event,0,13)" onkeyup="return searchResults.NavChild(event,0,13)" class="SRScope" href="../classapp_1_1give__user__datalove__api.html#af40fdc5c2e52a6f1f18c3692a5fd8995" target="_parent">app::give_user_datalove_api.GET()</a>
+    <a id="Item0_c14" onkeydown="return searchResults.NavChild(event,0,14)" onkeypress="return searchResults.NavChild(event,0,14)" onkeyup="return searchResults.NavChild(event,0,14)" class="SRScope" href="../classapp_1_1history.html#aa9e705452b0ae9a8cb685c1155b69b06" target="_parent">app::history.GET()</a>
+    <a id="Item0_c15" onkeydown="return searchResults.NavChild(event,0,15)" onkeypress="return searchResults.NavChild(event,0,15)" onkeyup="return searchResults.NavChild(event,0,15)" class="SRScope" href="../classapp_1_1user.html#a7dd6cc106c7400b8a4d50469a9003d06" target="_parent">app::user.GET()</a>
+    <a id="Item0_c16" onkeydown="return searchResults.NavChild(event,0,16)" onkeypress="return searchResults.NavChild(event,0,16)" onkeyup="return searchResults.NavChild(event,0,16)" class="SRScope" href="../classapp_1_1user__give__user__datalove.html#a877da0a56b964b3cc6a43a5832bfac6f" target="_parent">app::user_give_user_datalove.GET()</a>
   </div>
  </div>
 </div>
@@ -34,51 +37,75 @@
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
+<div class="SRResult" id="SR_get_5fhistory">
+ <div class="SREntry">
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#ad590b1c03f1eac11ae858b8524501e0b" target="_parent">get_history</a>
+  <span class="SRScope">db_handling::DBHandler</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_get_5fprofile">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a96a631e4c293833f4f1f30a665613bb5" target="_parent">get_profile</a>
+  <span class="SRScope">db_handling::DBHandler</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_get_5freceived_5flove">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#aded6db19dbcf2829597e52daeef5702c" target="_parent">get_received_love</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#aded6db19dbcf2829597e52daeef5702c" target="_parent">get_received_love</a>
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
 <div class="SRResult" id="SR_get_5fsession">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a5bca61f26c70865c7f6501e76d373dba" target="_parent">get_session</a>
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a5bca61f26c70865c7f6501e76d373dba" target="_parent">get_session</a>
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
 <div class="SRResult" id="SR_get_5fsession_5fid">
  <div class="SREntry">
-  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../namespaceapp.html#a7e3f576cb6de46a9f5259ea33a1fab6b" target="_parent">get_session_id</a>
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../namespaceapp.html#a7e3f576cb6de46a9f5259ea33a1fab6b" target="_parent">get_session_id</a>
   <span class="SRScope">app</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_get_5ftotal_5floverz">
+ <div class="SREntry">
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a4d6478d3d629b42ace6ef50d1fecb95b" target="_parent">get_total_loverz</a>
+  <span class="SRScope">db_handling::DBHandler</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_get_5fusers">
+ <div class="SREntry">
+  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#ad57301c2c301aa0d80cc0eb270b30709" target="_parent">get_users</a>
+  <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
 <div class="SRResult" id="SR_get_5fusers_5favailable_5flove">
  <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classapp_1_1get__users__available__love.html" target="_parent">get_users_available_love</a>
+  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="../classapp_1_1get__users__available__love.html" target="_parent">get_users_available_love</a>
   <span class="SRScope">app</span>
  </div>
 </div>
 <div class="SRResult" id="SR_get_5fusers_5flove">
  <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classapp_1_1get__users__love.html" target="_parent">get_users_love</a>
+  <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="../classapp_1_1get__users__love.html" target="_parent">get_users_love</a>
   <span class="SRScope">app</span>
  </div>
 </div>
 <div class="SRResult" id="SR_get_5fusers_5freceived_5flove">
  <div class="SREntry">
-  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classapp_1_1get__users__received__love.html" target="_parent">get_users_received_love</a>
+  <a id="Item11" onkeydown="return searchResults.Nav(event,11)" onkeypress="return searchResults.Nav(event,11)" onkeyup="return searchResults.Nav(event,11)" class="SRSymbol" href="../classapp_1_1get__users__received__love.html" target="_parent">get_users_received_love</a>
   <span class="SRScope">app</span>
  </div>
 </div>
 <div class="SRResult" id="SR_give_5fuser_5fdatalove">
  <div class="SREntry">
-  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../classapp_1_1give__user__datalove.html" target="_parent">give_user_datalove</a>
+  <a id="Item12" onkeydown="return searchResults.Nav(event,12)" onkeypress="return searchResults.Nav(event,12)" onkeyup="return searchResults.Nav(event,12)" class="SRSymbol" href="../classapp_1_1give__user__datalove.html" target="_parent">give_user_datalove</a>
   <span class="SRScope">app</span>
  </div>
 </div>
 <div class="SRResult" id="SR_give_5fuser_5fdatalove_5fapi">
  <div class="SREntry">
-  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="../classapp_1_1give__user__datalove__api.html" target="_parent">give_user_datalove_api</a>
+  <a id="Item13" onkeydown="return searchResults.Nav(event,13)" onkeypress="return searchResults.Nav(event,13)" onkeyup="return searchResults.Nav(event,13)" class="SRSymbol" href="../classapp_1_1give__user__datalove__api.html" target="_parent">give_user_datalove_api</a>
   <span class="SRScope">app</span>
  </div>
 </div>
