--- a/search/all_68.html
+++ b/search/all_68.html
@@ -13,9 +13,15 @@
   <span class="SRScope">db_handling</span>
  </div>
 </div>
+<div class="SRResult" id="SR_history">
+ <div class="SREntry">
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classapp_1_1history.html" target="_parent">history</a>
+  <span class="SRScope">app</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_host_5furl">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../namespaceconfig.html#a95564bb8491aecadcae409f58d240c13" target="_parent">host_url</a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../namespaceconfig.html#a95564bb8491aecadcae409f58d240c13" target="_parent">host_url</a>
   <span class="SRScope">config</span>
  </div>
 </div>
