--- a/search/classes_72.html
+++ b/search/classes_72.html
@@ -7,27 +7,21 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
-<div class="SRResult" id="SR_register_5faction">
+<div class="SRResult" id="SR_random_5fnickname">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classapp_1_1register__action.html" target="_parent">register_action</a>
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classapp_1_1random__nickname.html" target="_parent">random_nickname</a>
   <span class="SRScope">app</span>
  </div>
 </div>
-<div class="SRResult" id="SR_register_5fform">
+<div class="SRResult" id="SR_register">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classapp_1_1register__form.html" target="_parent">register_form</a>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classapp_1_1register.html" target="_parent">register</a>
   <span class="SRScope">app</span>
  </div>
 </div>
-<div class="SRResult" id="SR_reset_5fpassword_5faction">
+<div class="SRResult" id="SR_reset_5fpassword">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classapp_1_1reset__password__action.html" target="_parent">reset_password_action</a>
-  <span class="SRScope">app</span>
- </div>
-</div>
-<div class="SRResult" id="SR_reset_5fpassword_5fform">
- <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classapp_1_1reset__password__form.html" target="_parent">reset_password_form</a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classapp_1_1reset__password.html" target="_parent">reset_password</a>
   <span class="SRScope">app</span>
  </div>
 </div>
