--- a/search/classes_75.html
+++ b/search/classes_75.html
@@ -13,10 +13,28 @@
   <span class="SRScope">app</span>
  </div>
 </div>
+<div class="SRResult" id="SR_user">
+ <div class="SREntry">
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classapp_1_1user.html" target="_parent">user</a>
+  <span class="SRScope">app</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_user_5fgive_5fuser_5fdatalove">
+ <div class="SREntry">
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classapp_1_1user__give__user__datalove.html" target="_parent">user_give_user_datalove</a>
+  <span class="SRScope">app</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_userexception">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classdb__handling_1_1_user_exception.html" target="_parent">UserException</a>
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classdb__handling_1_1_user_exception.html" target="_parent">UserException</a>
   <span class="SRScope">db_handling</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_users">
+ <div class="SREntry">
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classapp_1_1users.html" target="_parent">users</a>
+  <span class="SRScope">app</span>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
