--- a/search/functions_70.html
+++ b/search/functions_70.html
@@ -13,8 +13,8 @@
   <div class="SRChildren">
     <a id="Item0_c0" onkeydown="return searchResults.NavChild(event,0,0)" onkeypress="return searchResults.NavChild(event,0,0)" onkeyup="return searchResults.NavChild(event,0,0)" class="SRScope" href="../classapp_1_1index.html#a5ce09c7cd6f3ee9475f62d6a3de200b3" target="_parent">app::index.POST()</a>
     <a id="Item0_c1" onkeydown="return searchResults.NavChild(event,0,1)" onkeypress="return searchResults.NavChild(event,0,1)" onkeyup="return searchResults.NavChild(event,0,1)" class="SRScope" href="../classapp_1_1manage__account.html#a1e5d8c17ae08f26f7de1043af84f040c" target="_parent">app::manage_account.POST()</a>
-    <a id="Item0_c2" onkeydown="return searchResults.NavChild(event,0,2)" onkeypress="return searchResults.NavChild(event,0,2)" onkeyup="return searchResults.NavChild(event,0,2)" class="SRScope" href="../classapp_1_1register__action.html#a908425eb9523499bb461a2c294c0367f" target="_parent">app::register_action.POST()</a>
-    <a id="Item0_c3" onkeydown="return searchResults.NavChild(event,0,3)" onkeypress="return searchResults.NavChild(event,0,3)" onkeyup="return searchResults.NavChild(event,0,3)" class="SRScope" href="../classapp_1_1reset__password__action.html#a41be0120f6d29d280c1ef8b75493396f" target="_parent">app::reset_password_action.POST()</a>
+    <a id="Item0_c2" onkeydown="return searchResults.NavChild(event,0,2)" onkeypress="return searchResults.NavChild(event,0,2)" onkeyup="return searchResults.NavChild(event,0,2)" class="SRScope" href="../classapp_1_1register.html#af702fc9d9c2ebed44c9c5a5448ebecbc" target="_parent">app::register.POST()</a>
+    <a id="Item0_c3" onkeydown="return searchResults.NavChild(event,0,3)" onkeypress="return searchResults.NavChild(event,0,3)" onkeyup="return searchResults.NavChild(event,0,3)" class="SRScope" href="../classapp_1_1reset__password.html#a89ed1f07c45d9befe381fb031f1ad1c4" target="_parent">app::reset_password.POST()</a>
   </div>
  </div>
 </div>
