--- a/search/functions_67.html
+++ b/search/functions_67.html
@@ -55,16 +55,16 @@
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
-<div class="SRResult" id="SR_get_5fsession">
- <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a5bca61f26c70865c7f6501e76d373dba" target="_parent">get_session</a>
-  <span class="SRScope">db_handling::DBHandler</span>
- </div>
-</div>
 <div class="SRResult" id="SR_get_5fsession_5fid">
  <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../namespaceapp.html#a7e3f576cb6de46a9f5259ea33a1fab6b" target="_parent">get_session_id</a>
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../namespaceapp.html#a7e3f576cb6de46a9f5259ea33a1fab6b" target="_parent">get_session_id</a>
   <span class="SRScope">app</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_get_5fsession_5fuser">
+ <div class="SREntry">
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a07fd7941afbf5920416f5577a49b64ed" target="_parent">get_session_user</a>
+  <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
 <div class="SRResult" id="SR_get_5ftotal_5floverz">
