--- a/search/all_6e.html
+++ b/search/all_6e.html
@@ -7,10 +7,28 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
+<div class="SRResult" id="SR_not_5flogged_5fin_5fpage">
+ <div class="SREntry">
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_not_5flogged_5fin_5fpage')">not_logged_in_page</a>
+  <div class="SRChildren">
+    <a id="Item0_c0" onkeydown="return searchResults.NavChild(event,0,0)" onkeypress="return searchResults.NavChild(event,0,0)" onkeyup="return searchResults.NavChild(event,0,0)" class="SRScope" href="../classapp_1_1give__user__datalove.html#aef9315329fc70f9c5732d8e8a070d494" target="_parent">app::give_user_datalove.not_logged_in_page()</a>
+    <a id="Item0_c1" onkeydown="return searchResults.NavChild(event,0,1)" onkeypress="return searchResults.NavChild(event,0,1)" onkeyup="return searchResults.NavChild(event,0,1)" class="SRScope" href="../classapp_1_1give__user__datalove__widget.html#a9356f74eac9c16a66a5e3649aa31f42f" target="_parent">app::give_user_datalove_widget.not_logged_in_page()</a>
+    <a id="Item0_c2" onkeydown="return searchResults.NavChild(event,0,2)" onkeypress="return searchResults.NavChild(event,0,2)" onkeyup="return searchResults.NavChild(event,0,2)" class="SRScope" href="../classapp_1_1give__user__datalove__list.html#afa9c08f0af26232649d812fca68290fa" target="_parent">app::give_user_datalove_list.not_logged_in_page()</a>
+    <a id="Item0_c3" onkeydown="return searchResults.NavChild(event,0,3)" onkeypress="return searchResults.NavChild(event,0,3)" onkeyup="return searchResults.NavChild(event,0,3)" class="SRScope" href="../classapp_1_1give__user__datalove__api.html#a5ce315621de8e9b1222b74aca8e03dbd" target="_parent">app::give_user_datalove_api.not_logged_in_page()</a>
+    <a id="Item0_c4" onkeydown="return searchResults.NavChild(event,0,4)" onkeypress="return searchResults.NavChild(event,0,4)" onkeyup="return searchResults.NavChild(event,0,4)" class="SRScope" href="../classapp_1_1give__user__datalove__profile.html#ab4cc948c7598baadbe5ded49c196875f" target="_parent">app::give_user_datalove_profile.not_logged_in_page()</a>
+  </div>
+ </div>
+</div>
 <div class="SRResult" id="SR_notenoughdataloveexception">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classdb__handling_1_1_not_enough_datalove_exception.html" target="_parent">NotEnoughDataloveException</a>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classdb__handling_1_1_not_enough_datalove_exception.html" target="_parent">NotEnoughDataloveException</a>
   <span class="SRScope">db_handling</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_notfound">
+ <div class="SREntry">
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../namespaceapp.html#a7cba1bd5597d3bd44747345e202505d2" target="_parent">notfound</a>
+  <span class="SRScope">app</span>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
