--- a/search/classes_67.html
+++ b/search/classes_67.html
@@ -37,6 +37,24 @@
   <span class="SRScope">app</span>
  </div>
 </div>
+<div class="SRResult" id="SR_give_5fuser_5fdatalove_5flist">
+ <div class="SREntry">
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classapp_1_1give__user__datalove__list.html" target="_parent">give_user_datalove_list</a>
+  <span class="SRScope">app</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_give_5fuser_5fdatalove_5fprofile">
+ <div class="SREntry">
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classapp_1_1give__user__datalove__profile.html" target="_parent">give_user_datalove_profile</a>
+  <span class="SRScope">app</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_give_5fuser_5fdatalove_5fwidget">
+ <div class="SREntry">
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classapp_1_1give__user__datalove__widget.html" target="_parent">give_user_datalove_widget</a>
+  <span class="SRScope">app</span>
+ </div>
+</div>
 <div class="SRStatus" id="Searching">Searching...</div>
 <div class="SRStatus" id="NoMatches">No Matches</div>
 <script type="text/javascript"><!--
