--- a/search/all_67.html
+++ b/search/all_67.html
@@ -24,10 +24,8 @@
     <a id="Item0_c10" onkeydown="return searchResults.NavChild(event,0,10)" onkeypress="return searchResults.NavChild(event,0,10)" onkeyup="return searchResults.NavChild(event,0,10)" class="SRScope" href="../classapp_1_1get__users__love.html#a5550134e8e54e147a4b0a12cde07a202" target="_parent">app::get_users_love.GET()</a>
     <a id="Item0_c11" onkeydown="return searchResults.NavChild(event,0,11)" onkeypress="return searchResults.NavChild(event,0,11)" onkeyup="return searchResults.NavChild(event,0,11)" class="SRScope" href="../classapp_1_1get__users__available__love.html#a3abd105e4281abb47464c6af29c6da8a" target="_parent">app::get_users_available_love.GET()</a>
     <a id="Item0_c12" onkeydown="return searchResults.NavChild(event,0,12)" onkeypress="return searchResults.NavChild(event,0,12)" onkeyup="return searchResults.NavChild(event,0,12)" class="SRScope" href="../classapp_1_1get__users__received__love.html#a5663dc8eee6ba4fbd71973b6b859d647" target="_parent">app::get_users_received_love.GET()</a>
-    <a id="Item0_c13" onkeydown="return searchResults.NavChild(event,0,13)" onkeypress="return searchResults.NavChild(event,0,13)" onkeyup="return searchResults.NavChild(event,0,13)" class="SRScope" href="../classapp_1_1give__user__datalove__api.html#af40fdc5c2e52a6f1f18c3692a5fd8995" target="_parent">app::give_user_datalove_api.GET()</a>
-    <a id="Item0_c14" onkeydown="return searchResults.NavChild(event,0,14)" onkeypress="return searchResults.NavChild(event,0,14)" onkeyup="return searchResults.NavChild(event,0,14)" class="SRScope" href="../classapp_1_1history.html#aa9e705452b0ae9a8cb685c1155b69b06" target="_parent">app::history.GET()</a>
-    <a id="Item0_c15" onkeydown="return searchResults.NavChild(event,0,15)" onkeypress="return searchResults.NavChild(event,0,15)" onkeyup="return searchResults.NavChild(event,0,15)" class="SRScope" href="../classapp_1_1user.html#a7dd6cc106c7400b8a4d50469a9003d06" target="_parent">app::user.GET()</a>
-    <a id="Item0_c16" onkeydown="return searchResults.NavChild(event,0,16)" onkeypress="return searchResults.NavChild(event,0,16)" onkeyup="return searchResults.NavChild(event,0,16)" class="SRScope" href="../classapp_1_1user__give__user__datalove.html#a877da0a56b964b3cc6a43a5832bfac6f" target="_parent">app::user_give_user_datalove.GET()</a>
+    <a id="Item0_c13" onkeydown="return searchResults.NavChild(event,0,13)" onkeypress="return searchResults.NavChild(event,0,13)" onkeyup="return searchResults.NavChild(event,0,13)" class="SRScope" href="../classapp_1_1history.html#aa9e705452b0ae9a8cb685c1155b69b06" target="_parent">app::history.GET()</a>
+    <a id="Item0_c14" onkeydown="return searchResults.NavChild(event,0,14)" onkeypress="return searchResults.NavChild(event,0,14)" onkeyup="return searchResults.NavChild(event,0,14)" class="SRScope" href="../classapp_1_1user.html#a7dd6cc106c7400b8a4d50469a9003d06" target="_parent">app::user.GET()</a>
   </div>
  </div>
 </div>
@@ -106,6 +104,24 @@
 <div class="SRResult" id="SR_give_5fuser_5fdatalove_5fapi">
  <div class="SREntry">
   <a id="Item13" onkeydown="return searchResults.Nav(event,13)" onkeypress="return searchResults.Nav(event,13)" onkeyup="return searchResults.Nav(event,13)" class="SRSymbol" href="../classapp_1_1give__user__datalove__api.html" target="_parent">give_user_datalove_api</a>
+  <span class="SRScope">app</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_give_5fuser_5fdatalove_5flist">
+ <div class="SREntry">
+  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="../classapp_1_1give__user__datalove__list.html" target="_parent">give_user_datalove_list</a>
+  <span class="SRScope">app</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_give_5fuser_5fdatalove_5fprofile">
+ <div class="SREntry">
+  <a id="Item15" onkeydown="return searchResults.Nav(event,15)" onkeypress="return searchResults.Nav(event,15)" onkeyup="return searchResults.Nav(event,15)" class="SRSymbol" href="../classapp_1_1give__user__datalove__profile.html" target="_parent">give_user_datalove_profile</a>
+  <span class="SRScope">app</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_give_5fuser_5fdatalove_5fwidget">
+ <div class="SREntry">
+  <a id="Item16" onkeydown="return searchResults.Nav(event,16)" onkeypress="return searchResults.Nav(event,16)" onkeyup="return searchResults.Nav(event,16)" class="SRSymbol" href="../classapp_1_1give__user__datalove__widget.html" target="_parent">give_user_datalove_widget</a>
   <span class="SRScope">app</span>
  </div>
 </div>
