--- a/search/all_75.html
+++ b/search/all_75.html
@@ -37,22 +37,28 @@
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
-<div class="SRResult" id="SR_user_5fgive_5fuser_5fdatalove">
- <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classapp_1_1user__give__user__datalove.html" target="_parent">user_give_user_datalove</a>
-  <span class="SRScope">app</span>
- </div>
-</div>
 <div class="SRResult" id="SR_user_5flogin">
  <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a8f17386333f7ed91a017b892fed5d4b0" target="_parent">user_login</a>
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a8f17386333f7ed91a017b892fed5d4b0" target="_parent">user_login</a>
   <span class="SRScope">db_handling::DBHandler</span>
  </div>
 </div>
 <div class="SRResult" id="SR_user_5flogoff">
  <div class="SREntry">
-  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a379abbbc6ff7831fdb06617d18949739" target="_parent">user_logoff</a>
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classdb__handling_1_1_d_b_handler.html#a379abbbc6ff7831fdb06617d18949739" target="_parent">user_logoff</a>
   <span class="SRScope">db_handling::DBHandler</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_user_5fnot_5fexists_5fpage">
+ <div class="SREntry">
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_user_5fnot_5fexists_5fpage')">user_not_exists_page</a>
+  <div class="SRChildren">
+    <a id="Item7_c0" onkeydown="return searchResults.NavChild(event,7,0)" onkeypress="return searchResults.NavChild(event,7,0)" onkeyup="return searchResults.NavChild(event,7,0)" class="SRScope" href="../classapp_1_1give__user__datalove.html#a5ff76f5574b890a842a61b8687debd8e" target="_parent">app::give_user_datalove.user_not_exists_page()</a>
+    <a id="Item7_c1" onkeydown="return searchResults.NavChild(event,7,1)" onkeypress="return searchResults.NavChild(event,7,1)" onkeyup="return searchResults.NavChild(event,7,1)" class="SRScope" href="../classapp_1_1give__user__datalove__widget.html#ab1ee90c30a992f3eaad3a0c67a66b831" target="_parent">app::give_user_datalove_widget.user_not_exists_page()</a>
+    <a id="Item7_c2" onkeydown="return searchResults.NavChild(event,7,2)" onkeypress="return searchResults.NavChild(event,7,2)" onkeyup="return searchResults.NavChild(event,7,2)" class="SRScope" href="../classapp_1_1give__user__datalove__list.html#a98847fc91a399ec3fdb7aaa035979310" target="_parent">app::give_user_datalove_list.user_not_exists_page()</a>
+    <a id="Item7_c3" onkeydown="return searchResults.NavChild(event,7,3)" onkeypress="return searchResults.NavChild(event,7,3)" onkeyup="return searchResults.NavChild(event,7,3)" class="SRScope" href="../classapp_1_1give__user__datalove__api.html#a1aa9f0da33b1cb2a997d479be8728cfe" target="_parent">app::give_user_datalove_api.user_not_exists_page()</a>
+    <a id="Item7_c4" onkeydown="return searchResults.NavChild(event,7,4)" onkeypress="return searchResults.NavChild(event,7,4)" onkeyup="return searchResults.NavChild(event,7,4)" class="SRScope" href="../classapp_1_1give__user__datalove__profile.html#a52022c41d73195f96c8636497497432d" target="_parent">app::give_user_datalove_profile.user_not_exists_page()</a>
+  </div>
  </div>
 </div>
 <div class="SRResult" id="SR_userexception">
